Fixed the Layout: shifted intro-content to the center of the screen in intro-container in the style.css in css dir.

--- a/css/style.css
+++ b/css/style.css
@@ -587,6 +587,8 @@ footer {
     .intro-content {
         padding-right: 5rem;
         padding-left: 5rem;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     .choose-bank-section {
